use HBOCodeLabs ibrik to fix coffeescript coverage reporting

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "SATO taichi <ryushi@gmail.com>",
   "dependencies": {
     "istanbul": "~0.2.10",
-    "ibrik": "~1.1.1",
+    "ibrik": "git+https://github.com/HBOCodeLabs/ibrik.git",
     "dateformat": "~1.0.6",
     "minimatch": "~0.3.0"
   },
